--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@syncfusion/ej2-react-calendars": "^28.1.41",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.8",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.14",
